[package]
name    = "dbbench"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono         = { version = "0.4.31" }
clap           = { version = "4.4.11", features = ["env", "derive"] }
dotenvy        = { version = "0.15.7" }
eyre           = { version = "0.6.11" }
log            = { version = "0.4.20" }
sea-orm        = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"] }
sqlx           = { version = "0.7.3", features = ["runtime-tokio-rustls", "json", "postgres"] }
tokio          = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
uuid           = { version = "1.6.1", features = ["v4", "serde"] }
